Bug #3755 <https://bugs.freedesktop.org/show_bug.cgi?id=3755> twm can't     handle 8-bit characters in .twmrc (Tomohiro KUBOITA)